--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@mui/icons-material": "^5.15.4",
     "@mui/material": "^5.15.4",
     "@mui/styled-engine-sc": "^6.0.0-alpha.12",
+    "@reduxjs/toolkit": "^2.0.1",
     "@tinymce/tinymce-react": "^4.3.2",
-    "firebase": "^10.7.1",
+    "firebase": "^10.7.2",
     "react": "^18.2.0",
+    "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
     "react-toastify": "^9.1.3",
     "styled-components": "^6.1.8"
