--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "react": "^18.2.0",
     "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
-    "react-toastify": "^9.1.3",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
